--- a/swisher/templates/base.html
+++ b/swisher/templates/base.html
@@ -35,7 +35,7 @@
     <div class="header">
       % for tab in tabs:
       <%
-        taburl = tab.replace(" ", "")
+        taburl = tab.replace(" ", "").replace("Home","")
         tab = tab.replace(" ", "&nbsp;")
         if tab == "Search":
           taburl = ""
